[package]
name = "blescan"
version = "0.4.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
btleplug = "0.11"
tokio = { version="1.44", features = ["rt-multi-thread", "macros"]}
pretty_env_logger = "0.5"
futures = "0.3"
md5 = "0.7"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = "0.26.1"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
humantime = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "migrate" ] }
async-trait = "0.1.88"
gzp = "0.11.3"
