[workspace]
members = [
    "blescan-discovery",
    "blescan-domain",
    "blescan-sinks",
    "blescan-tui",
    "blescan-mote",
    "blescan-cli",
]
exclude = [
    "blescan-mote-m5-plus2",
    "m5/m5-minimal",
    "m5/m5-simple-graphics",
    "m5/m5-ble-hello",
    "m5/m5-ble-scan-collector",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
btleplug = "0.11"
crossterm = "0.29.0"
futures = "0.3"
gzp = "1.0.1"
humantime = "2.2.0"
md5 = "0.7"
pretty_env_logger = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base62 = "2.2"
serde_json = "1.0.140"
uuid = "1.0"

[workspace.dependencies.chrono]
version = "0.4.41"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.5.37"
features = ["derive"]

[workspace.dependencies.ratatui]
version = "0.29.0"
features = ["all-widgets"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8.5"
features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "chrono",
    "migrate",
]

[workspace.dependencies.tokio]
version = "1.44"
features = [
    "rt-multi-thread",
    "macros",
]
