[package]
name = "blescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
tokio = { version="1.29", features = ["rt-multi-thread", "macros"]}
pretty_env_logger = "0.5"
futures = "0.3"
md5 = "0.7"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = "0.26.1"
anyhow = "1.0.72"
chrono = "0.4.26"
humantime = "2.1.0"
