[package]
name = "blescan"
version = "0.6.0"
edition = "2024"

[dependencies]
btleplug = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
futures = { workspace = true }
md5 = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
gzp = { workspace = true }
