[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# crate-type = ["lib", "staticlib", "cdylib"]
crate-type = ["lib", "staticlib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
# crux_core = { version = "0.6", path = "../../../crux_core" }
# crux_macros = { version = "0.3", path = "../../../crux_macros" }
crux_core = "0.6"
crux_macros = "0.3"
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.4.0"
uniffi = "0.24.1"
wasm-bindgen = "0.2.87"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.24.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.1", features = ["build"] }