[package]
edition      = "2024"
name         = "m5-minimal"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "m5-minimal"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
